# evoplex

./: .appveyor.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  README.md  metadata.json  model.cpp  model.h  modelMetaData.json  plugin.cpp  plugin.h
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
models/: CMakeLists.txt
models/hopd/: agents.csv  model.cpp  model.h
plugins/: CMakeLists.txt
plugins/graphs/: CMakeLists.txt
plugins/graphs/mooregrid/: CMakeLists.txt  graph.cpp  graph.h  graphMetaData.json  mooregrid.cpp  mooregrid.h
plugins/graphs/squaregrid/: squaregrid.cpp  squaregrid.h
plugins/models/: CMakeLists.txt
plugins/models/hopd/: CMakeLists.txt  agents.csv  model.cpp  model.h  modelMetaData.json
plugins/models/test/: CMakeLists.txt  model.cpp  model.h
src/: CMakeLists.txt  config.h.in  evoplex.desktop  evoplex.icns  evoplex.rc  main.cpp
src/cmake/: EvoplexCPack.cmake
src/core/: CMakeLists.txt  abstractagent.h  abstractgraph.cpp  abstractgraph.h  abstractmodel.cpp  abstractmodel.h  abstractplugin.cpp  abstractplugin.h  agent.cpp  agent.h  agentsgenerator.cpp  agentsgenerator.h  attributerange.cpp  attributes.h  attrsgenerator.cpp  attrsgenerator.h  basegraph.cpp  constants.h  edge.cpp  edge.h  edge_p.cpp  edge_p.h  enums.h  experiment.cpp  experiment.h  experimentsmgr.cpp  experimentsmgr.h  expinputs.cpp  expinputs.h  filemgr.cpp  filemgr.h  graph.cpp  graph.h  graphinputs.cpp  graphinputs.h  graphplugin.cpp  graphplugin.h  imodel.h  interfaces.h  logger.cpp  (+37 more)
src/core/cmake/: EvoplexCoreConfig.cmake
src/core/include/: abstractgraph.h  abstractmodel.h  abstractplugin.h  agent.h  attributerange.h  attributes.h  attrsgenerator.h  basegraph.h  baseplugin.h  constants.h  edge.h  edges.h  enum.h  node.h  nodes.h  plugininterface.h  plugininterfaces.h  prg.h  stats.h  utils.h  value.h  valuespace.h
src/gui/: CMakeLists.txt  agentsgeneratordlg.cpp  agentsgeneratordlg.h  agentswidget.cpp  agentswidget.h  attrcolorselector.cpp  attrcolorselector.h  attributeswidget.cpp  attributeswidget.h  attrsgendlg.cpp  attrsgendlg.h  attrwidget.cpp  attrwidget.h  basegraphgl.cpp  basegraphgl.h  colormap.cpp  colormap.h  consolewidget.cpp  consolewidget.h  contextmenutable.cpp  contextmenutable.h  experimentdesigner.cpp  experimentdesigner.h  experimentview.cpp  experimentview.h  experimentwidget.cpp  experimentwidget.h  fontstyles.cpp  fontstyles.h  fullinspector.cpp  fullinspector.h  graphattrsdlg.cpp  graphattrsdlg.h  graphdesigner.cpp  graphdesigner.h  graphdesignerpage.cpp  graphdesignerpage.h  graphdesignerwidget.cpp  graphdesignerwidget.h  graphgendlg.cpp  (+63 more)
src/gui/data/: colormaps.json  data.qrc
src/gui/forms/: agentsgeneratordlg.ui  agentswidget.ui  attrcolorselector.ui  attributeswidget.ui  attrsgendlg.ui  basegraphgl.ui  consoletitlebar.ui  experimentdesigner.ui  experimentview.ui  fullinspector.ui  graphattrsdlg.ui  graphdesigner.ui  graphdesignerpage.ui  graphgendlg.ui  graphpage.ui  graphsettings.ui  graphtitlebar.ui  graphwidget.ui  gridsettings.ui  linechartsettings.ui  maingui.ui  nodesgeneratordlg.ui  outputwidget.ui  pluginspage.ui  pluginswidget.ui  projectwidget.ui  queuepage.ui  queuewidget.ui  savedialog.ui  settingspage.ui  settingswidget.ui  tablewidget.ui  titlebar.ui  welcomepage.ui  welcomewidget.ui  widgetproject.ui  wizardnewproject.ui
src/gui/icons/: icons.qrc
src/gui/res/: colormaps.json  guiRes.qrc
src/gui/res/lan/: settings_de.qm  settings_de.ts
src/gui/res/material-icons/: README.md
src/gui/res/stylesheets/: dark.qss
src/plugins/: CMakeLists.txt
src/plugins/graphs/: CMakeLists.txt
src/plugins/graphs/customgraph/: CMakeLists.txt  graph.cpp  graph.h  graphMetaData.json  metadata.json  plugin.cpp  plugin.h
src/plugins/graphs/cycle/: metadata.json  plugin.cpp  plugin.h
src/plugins/graphs/edgesFromCSV/: metadata.json  plugin.cpp  plugin.h
src/plugins/graphs/mooregrid/: CMakeLists.txt  graph.cpp  graph.h  graphMetaData.json
src/plugins/graphs/path/: metadata.json  plugin.cpp  plugin.h
src/plugins/graphs/squaregrid/: CMakeLists.txt  graph.cpp  graph.h  graphMetaData.json  metadata.json  plugin.cpp  plugin.h
src/plugins/graphs/star/: metadata.json  plugin.cpp  plugin.h
src/plugins/graphs/zeroEdges/: metadata.json  plugin.cpp  plugin.h
src/plugins/models/: CMakeLists.txt
src/plugins/models/cellularAutomata1D/: CMakeLists.txt  README.md  metadata.json  plugin.cpp  plugin.h
src/plugins/models/gameOfLife/: CMakeLists.txt  README.md  metadata.json  plugin.cpp  plugin.h
src/plugins/models/nowak92/: CMakeLists.txt  LICENSE.txt  README.md  metadata.json  model.cpp  model.h  modelMetaData.json  plugin.cpp  plugin.h
src/plugins/models/populationGrowth/: README.md  metadata.json  plugin.cpp
src/plugins/models/prisonersDilemma/: CMakeLists.txt  README.md  metadata.json  plugin.cpp  plugin.h
src/plugins/models/test/: CMakeLists.txt  metadata.json  model.cpp  model.h  modelMetaData.json  plugin.cpp  plugin.h
src/plugins/models/test2/: model.cpp  model.h  modelMetaData.json
src/test/: CMakeLists.txt  data.qrc  evoplex.cpp  tst_attributerange.cpp  tst_attributes.cpp  tst_attrsgenerator.cpp  tst_edge.cpp  tst_node.cpp  tst_nodes.cpp  tst_prg.cpp  tst_value.cpp
src/test/data/: nodes_no_xy.csv  nodes_with_invalid_attrs.csv  nodes_with_invalid_file.csv  nodes_with_x.csv  nodes_with_xy.csv  nodes_with_y.csv  nodes_with_y_alt.csv
src/util/: util.h
src/utils/: constants.h  prg.h  singleton.h  utils.h  win-config.xml  win-installer.sh  win-installerscript.qs  win-package.xml
src/utils/mac/: EvoplexDMGBackground.tif  EvoplexDMGSetup.scpt
src/utils/rpm/: genChangelog.sh
src/utils/win/: win-config.xml  win-installer.sh
